--- a/style.css
+++ b/style.css
@@ -112,3 +112,38 @@ hr{margin:0px;background-color:#F2BD53;border:none;height:10px;}
 h1{color:#CDD5CA;
 font-family: 'Gro2';
 }
+/* iPhone 6, 6S, 7, 8, SE 2020 (портретный режим) */
+@media only screen and (orientation: portrait) and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) { 
+h1 {font-size:64px;}
+p {font-size:36px; margin-left:-15%;}
+
+button{height:100px; font-size:48px; }
+
+body{background-color: #F2BD53 ;}
+input{  height:80px; font-size:48px; margin-bottom:1%; margin-top:1%; z-index:6;
+    box-shadow: 0 0 80px rgba(0,0,0,0.20);}
+
+header {width:100%; height:5%;}
+header button{height:60%; width:60%; font-size:48px;}
+header img {height:60%; width:auto;}
+header p {font-size:48px; margin-left:20%; }
+.mT {  width:200%; height:70%;}
+.mT img{width:90%;  margin:4%; margin-left:-10%; }
+.mT h1 {margin:4%; margin-left:-20%; margin-top:15%; padding:80px;}
+
+.mK {width:200%;background-color:; margin-left:0%;}
+.mK img {width:60%; margin-left:-20%;}
+.tXT {width:200%; margin-left:0%;}
+.mAIL {  width:200%; padding-left:25%; padding-top:4%; padding-bottom:10%;}
+.mAIL h1{margin-left:2%;}
+.mAIL button {margin-top:1%; box-shadow: 0 0 80px rgba(0,0,0,0.40); z-index:3;}
+
+.mAIL img {display:none;}
+.cO {width:200%; margin-left:0%;}
+iframe {width:100%;}
+footer {width:200%; margin-left:0%;}
+footer p,h1{margin-left:-15%;}
+footer button {margin-left:-220px;}
+.zodiak {width:200%; margin-left:0%;}
+.black {width:200%; margin-left:0%;}
+}
